[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "yasa"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "botbowl @ https://github.com/njustesen/botbowl.git",
    "tabulate>=0.9.0",
]

[tool.maturin]
python-source = "python"
module-name = "yasa.yasa_core"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[dependency-groups]
dev = [
    "maturin>=1.9.6",
    "pre-commit>=4.3.0",
    "pytest>=7.3.1",
    "ruff>=0.14.0",
]
