[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "yasa"
requires-python = ">=3.10,<3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "botbowl @ git+https://github.com/kszonsteg/botbowl",
]

[tool.maturin]
python-source = "python"
module-name = "yasa.yasa_core"
features = ["pyo3/extension-module"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[dependency-groups]
bots = [
    "pyjnius>=1.7.0",
]
dev = [
    "maturin>=1.9.6",
    "pre-commit>=4.3.0",
    "pytest>=7.3.1",
    "ruff>=0.14.0",
]
nn = [
    "numpy>=1.24.3",
    "onnx>=1.19.1",
    "onnxscript>=0.5.6",
    "pytorch-lightning>=2.6.0",
    "rich>=14.2.0",
    "safetensors>=0.5.0",
    "tensorboard>=2.20.0",
    "torch==2.8.0",
]
rocm = [
    "pytorch-lightning>=2.6.0",
    "rich>=14.2.0",
    "tensorboard>=2.20.0",
]
